--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="/images/logo.png" alt=""></a>
+            <a href="index.html"><img src="./images/logo.png" alt=""></a>
             <div class="nav-links">
                 <i class="bi bi-x" id="navLinks"></i>
                 <ul>
@@ -42,7 +42,7 @@
             <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
         </div>
         <div class="about-col">
-            <img src="/images/about.jpg">
+            <img src="./images/about.jpg">
         </div>
     </div>
 
