--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="/images/logo.png" alt=""></a>
+            <a href="index.html"><img src="./images/logo.png" alt=""></a>
             <div class="nav-links">
                 <i class="bi bi-x" id="navLinks"></i>
                 <ul>
@@ -34,7 +34,7 @@
     <section class="blog-content">
         <div class="row">
             <div class="blog-left">
-                <img src="/images/certificate.jpg">
+                <img src="./images/certificate.jpg">
                 <h2>Our Certificates & Online Programmes for 2022</h2>
                 <p>Executive Education. Push the boundaries of knowledge beyond what is imaginable. 
                 Join Stanford Executive Education where we challenge ideas, take risks, encourage 
