--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="/images/logo.png" alt=""></a>
+            <a href="index.html"><img src="./images/logo.png" alt=""></a>
             <div class="nav-links">
                 <i class="bi bi-x" id="navLinks"></i>
                 <ul>
