--- a/course.html
+++ b/course.html
@@ -13,7 +13,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="/images/logo.png" alt=""></a>
+            <a href="index.html"><img src="./images/logo.png" alt=""></a>
             <div class="nav-links">
                 <i class="bi bi-x" id="navLinks"></i>
                 <ul>
@@ -65,19 +65,19 @@
     <p>Develop critical skills and strategies to lead your organisation through disruptive times</p>
     <div class="row">
         <div class="facilities-col">
-            <img src="/images/library.png" alt="">
+            <img src="./images/library.png" alt="">
             <h3>Worldclass Library</h3>
             <p>Lead & Navigate In A Highly Competitve World With ISB PGPMAX - 
             15 Month Modular Programme</p>
         </div>
         <div class="facilities-col">
-            <img src="/images/basketball.png" alt="">
+            <img src="./images/basketball.png" alt="">
             <h3>Largest Playgrond</h3>
             <p>Lead & Navigate In A Highly Competitve World With ISB PGPMAX - 
             15 Month Modular Programme</p>
         </div>
         <div class="facilities-col">
-            <img src="/images/cafeteria.png" alt="">
+            <img src="./images/cafeteria.png" alt="">
             <h3>Tasty and Healthy Food</h3>
             <p>Lead & Navigate In A Highly Competitve World With ISB PGPMAX - 
             15 Month Modular Programme</p>
