--- a/house.html
+++ b/house.html
@@ -13,7 +13,7 @@
 <body>
     <nav id="navbar" class="navbar-white">
         <a href="index.html">
-            <img src="/images/logo-red.png" class="logo">
+            <img src="./images/logo-red.png" class="logo">
         </a>
         
         <ul class="nav-links">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="gallery">
-            <div class="gallery-img1"><img src="/images/house-1.png" alt=""></div>
+            <div class="gallery-img1"><img src="./images/house-1.png" alt=""></div>
             <div><img src="/images/house-2.png" alt=""></div>
             <div><img src="/images/house-3.png" alt=""></div>
             <div><img src="/images/house-4.png" alt=""></div>
@@ -101,7 +101,7 @@
         </div>
         <hr class="line">
         <div class="host">
-            <img src="/images/host.png">
+            <img src="./images/host.png">
             <div>
                 <h2>Hosted by Brandon</h2>
                 <p><span><i class="bi bi-star-fill"></i>
